# pydantic_type_issue

./: pyproject.toml
pydantic_type_issue/: main.py
