[tool.poetry]
name = "pydantic-type-issue"
version = "0.1.0"
description = ""
authors = ["Powell, Kade (CCI-Southeast) <Kade.Powell@cox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
